# supernice

./: .dockerignore  .gitignore  .mypy.ini  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py
images/: BasePythonStarter.Dockerfile
python_starter/: __init__.py
server/: .pre-commit-config.yaml  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py
server/supernice/: main.py
server/supernice/infrastructure/apis/: main.py
tests/: test_python_starter.py
