[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "python_starter"
version = "0.0.1"
repository = "https://github.com/swapnice/python-starter"
license = "unlicense"
description = "a repo for starter projects"
authors = [ "Conrad Lippert-Zajaczkowski <ceo@swapped.shop>" ]

  [tool.poetry.dependencies]
  python = "3.10.*"
  black = "^23.3.0"
  isort = "^5.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
